# machine-learning-intep

./: .gitignore  CLAUDE.md  Clase2_ML_Primer_Modelo_Regresion.ipynb  README.md  ejemplo1.ipynb  main.py  pyproject.toml  regresion-logistica.ipynb  regresion.ipynb
Francisco_trejos/: Francisco_trejos.code-workspace  Mod_REG.ipynb  Mod_REG_Lineal.ipynb  regresion_logistica.ipynb
JEFFERSON/: clase2.ipynb  regrecion_logistica.ipynb  regresion-logistica.ipynb
Juan David Velez Campiño/Modelo de Regresion/: regresion.ipynb
Wilson_Russi_Intep/: Clase_20_Febrero.ipynb  Modelo_Regresion_logistica_Wilson_Russi.ipynb  ventas_ml_clase2.csv
alumnos/Cesar_Tirado/: Regresion_Lineal.ipynb  Regresion_Logistica.ipynb  generar_dataset.py
alumnos/EduardoPadilla/: Clase2_ML_Primer_Modelo_Regresion.ipynb  Model_RandomForest.ipynb  ModeloNaiveBayes.ipynb  regresion-logistica1.ipynb  regresion.ipynb  regresion_logistica.ipynb
alumnos/Eliana/: Model_RandomForest.ipynb
alumnos/Francisco_trejos/: Mod_REG.ipynb  abandono_clientes.csv  regresion_logistica.ipynb
alumnos/Gustavo_Gordillo/: Clase2_ML_Primer_Modelo_Regresion.ipynb  Model_RandomForestGustavoGordillo.ipynb  RegresionLogisticaGustavoGordillo.ipynb
alumnos/Jefferson_Balcazar/: regresion-logistica.ipynb
alumnos/JoseBorja/: Clase2_ML_Primer_Modelo_Regresion.ipynb  regresion.ipynb
alumnos/JuanJMayorga/: Actividad1_Mi_Primer_Modelo.ipynb  Clase2_ML_Primer_Modelo_Regresion.ipynb  README.md
alumnos/LinaZambrano/: Model_RandomForest.ipynb  Modelo_Naive_Bayes.ipynb
alumnos/Milton_Vanegas/: MOD_REG.ipynb  (+1 more)
clase-3/: leeme.txt
(+68 files in other folders)
