[project]
name = "machine-learning-intep"
version = "0.1.0"
description = "Machine Learning aplicado a procesos empresariales - INTEP"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "scikit-learn>=1.3.0",
    "jupyter>=1.0.0",
    "seaborn>=0.12.0",
]

[dependency-groups]
dev = [
    "nbstripout>=0.9.1",
]
